# playwright-rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  README.md  WHY.md  _typos.toml  deny.toml  index.html  versions.json
.cargo/: config.toml  mutants.toml
.config/: nextest.toml
.github/: dependabot.yml
crates/playwright/: CHANGELOG.md  Cargo.toml  build.rs
crates/playwright-core/: Cargo.toml
crates/playwright-core/src/: channel.rs  channel_owner.rs  connection.rs  driver.rs  error.rs  lib.rs  object_factory.rs  transport.rs
crates/playwright-core/src/api/: launch_options.rs
crates/playwright-core/src/protocol/: artifact.rs  browser.rs  browser_context.rs  browser_type.rs  browser_type_windows_fix.rs  click.rs  dialog.rs  download.rs  element_handle.rs  frame.rs  locator.rs  mod.rs  page.rs  playwright.rs  request.rs  response.rs  root.rs  route.rs
crates/playwright-core/tests/: click_options_test.rs  connection_integration.rs  downloads_dialogs_test.rs  initialization_integration.rs  locator_test.rs  page_integration.rs  page_navigation_test.rs  playwright_launch.rs  screenshot_test.rs  test_server.rs
crates/playwright-rs-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/playwright-rs-macros/src/: lib.rs
crates/playwright-rs-macros/tests/: locator_compile_fail.rs  locator_happy_path.rs
crates/playwright-rs-macros/tests/ui/: README.md  empty.rs  empty.stderr  unclosed_bracket.rs  unclosed_bracket.stderr  unknown_engine.rs  unknown_engine.stderr  unmatched_closer.rs  unmatched_closer.stderr  whitespace_only.rs  whitespace_only.stderr
crates/playwright-rs-trace/: CHANGELOG.md  Cargo.toml  README.md
crates/playwright-rs-trace/src/: action.rs  error.rs  event.rs  jsonl.rs  lib.rs  network.rs  trace.rs
crates/playwright-rs-trace/tests/: parse_fixture.rs
crates/playwright-rs-trace/tests/fixtures/: README.md
crates/playwright/benches/: browser_operations.rs  guid_operations.rs  page_operations.rs
crates/playwright/examples/: actions.rs  api_request.rs  assertions.rs  basic.rs  browser_lifecycle.rs  clock.rs  connect_over_cdp.rs  downloads_dialogs.rs  evaluate_typed.rs  keyboard_mouse.rs  launch_options.rs  locators.rs  network_events.rs  observability.rs  persistent_context.rs  responsive_testing.rs  routing.rs  screenshots.rs  sigint_repro.rs  state_assertions.rs  test_cdp.rs  trace_on_failure.rs  visual_regression.rs  websocket.rs
crates/playwright/fuzz/: Cargo.toml
crates/playwright/fuzz/fuzz_targets/: fuzz_parse_result.rs  fuzz_parse_value.rs  fuzz_serialize_argument.rs
crates/playwright/src/: assertions.rs  error.rs  lib.rs  testing.rs  tty_guard.rs
crates/playwright/src/api/: connect_options.rs  launch_options.rs  mod.rs
crates/playwright/src/build_support/: driver_assembly.rs  driver_urls.rs
crates/playwright/src/protocol/: accessibility.rs  action_options.rs  android.rs  api_request_context.rs  aria_snapshot.rs  artifact.rs  binding_call.rs  browser.rs  browser_context.rs  browser_type.rs  cdp_session.rs  click.rs  clock.rs  console_message.rs  coverage.rs  credentials.rs  debugger.rs  device.rs  dialog.rs  download.rs  drag_to.rs  drop_options.rs  electron.rs  element_handle.rs  evaluate_conversion.rs  event_value.rs  event_waiter.rs  file_chooser.rs  file_payload.rs  frame.rs  frame_locator.rs  glob.rs  har_options.rs  js_handle.rs  keyboard.rs  local_utils.rs  locator.rs  mime.rs  mod.rs  mouse.rs  (+21 more)
crates/playwright/src/server/: channel.rs  channel_owner.rs  connection.rs  driver.rs  mod.rs  object_factory.rs  playwright_server.rs  transport.rs
crates/playwright/src/server/transport/: mod.rs  pipe.rs  websocket.rs
crates/playwright/tests/: action_options_test.rs  actions_test.rs  add_init_script_test.rs  add_style_tag_test.rs  assertions_test.rs  browser_context_integration.rs  browser_context_options_test.rs  browser_context_pages_test.rs  browser_context_proxy_test.rs  browser_context_serialization_test.rs  browser_creation.rs  browser_install_error_test.rs  browser_launch_integration.rs  browser_type_connect_test.rs  checkbox_test.rs  click_options_test.rs  connection_integration.rs  downloads_dialogs_test.rs  element_handle_test.rs  evaluate_test.rs  file_payload_test.rs  initialization_integration.rs  keyboard_mouse_test.rs  launch_persistent_context_test.rs  locator_test.rs  navigation_errors_test.rs  network_route_comprehensive_test.rs  network_route_cross_browser_test.rs  network_route_pattern_test.rs  network_route_test_simple.rs  page_content_test.rs  page_integration.rs  page_navigation_test.rs  page_set_viewport_size_test.rs  page_url_hash_navigation_test.rs  playwright_launch.rs  playwright_version_test.rs  remote_connection_test.rs  route_continue_overrides_test.rs  route_main_document_test.rs  (+18 more)
crates/playwright/tests/integration/: actions.rs  api_request.rs  aria_snapshot.rs  assertions.rs  back_references.rs  browser.rs  browser_context.rs  cdp_tracing.rs  checkbox.rs  cli_bin.rs  click_options.rs  common.rs  connection.rs  console_message.rs  context_events.rs  context_route.rs  context_runtime_setters.rs  credentials.rs  debugger.rs  downloads_dialogs.rs  element_handle.rs  evaluate.rs  expect_event.rs  expose_binding.rs  fake_file_system.rs  file_chooser.rs  frame_api.rs  frame_locator.rs  initialization.rs  install_browsers.rs  js_handle.rs  keyboard_mouse.rs  launch_context.rs  locator.rs  main.rs  navigation.rs  network_route.rs  page.rs  page_assertions.rs  page_event_network.rs  (+26 more)
dev/: index.html  playwright-rs-site-276c64bfd7199a5e_bg.wasm  playwright-rs-site-3064e7a77f7a1664_bg.wasm  playwright-rs-site-3c3a5e36ad81f932.js  playwright-rs-site-3c3a5e36ad81f932_bg.wasm  playwright-rs-site-4f411e7c16c125b0_bg.wasm  playwright-rs-site-5aab5d68b79172e5.js  playwright-rs-site-5aab5d68b79172e5_bg.wasm  playwright-rs-site-60f06eee18bd5221.js  playwright-rs-site-60f06eee18bd5221_bg.wasm  playwright-rs-site-6a7fe5928d9c5d37.js  playwright-rs-site-6a7fe5928d9c5d37_bg.wasm  playwright-rs-site-ad037614e7382818_bg.wasm  playwright-rs-site-bfa7bfa7b8111f7a.js  (+7 more)
docs/: roadmap.md
(+79 files in other folders)
