[workspace]
members = [
    "crates/playwright",
]
resolver = "2"

[workspace.package]
version = "0.7.2"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
authors = ["Paul Adamson"]
repository = "https://github.com/padamson/playwright-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"
