[workspace]
members = [
    "crates/playwright",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Paul Adamson"]
repository = "https://github.com/padamson/playwright-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
