[workspace]
members = [
    "crates/playwright",
    "crates/playwright-rs-macros",
    "crates/playwright-rs-trace",
    "crates/xtask",
]
# The landing-page crates are a wasm32 Leptos CSR app (built by Trunk) and its
# native dogfood test. They're excluded so workspace-wide cargo commands and
# the publishable crates' supply-chain graph stay unaffected; pages.yml builds
# and tests them on their own.
exclude = [
    "crates/site",
    "crates/site-e2e",
]
resolver = "2"

[workspace.package]
version = "0.14.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Paul Adamson"]
repository = "https://github.com/padamson/playwright-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
