[package]
name = "playwright-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal implementation of Playwright protocol for Rust"
publish = false  # Internal crate, not published

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"
