[package]
name = "playwright-rs-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Compile-time-validated selector macros for playwright-rs"
keywords = ["playwright", "macros", "selectors", "compile-time"]
categories = ["development-tools::testing", "rust-patterns"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
