[package]
name = "playwright-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust bindings for Microsoft Playwright"
keywords = ["playwright", "browser", "automation", "testing", "e2e"]
categories = ["development-tools::testing", "web-programming"]
readme = "../../README.md"

[lib]
doctest = false  # Disable doc-tests by default (run with: cargo test --doc)

[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
base64 = "0.22"
regex = "1.10"
glob = "0.3"
tokio-tungstenite = { version = "0.29" }
futures-util = "0.3"
url = "2.5"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = "0.6"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
urlencoding = "2"
tempfile = "3"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "minwindef"] }

[build-dependencies]
# ureq (~5 transitive deps) covers the one blocking HTTP GET in
# build.rs without dragging in the hyper/tower/h2 stack reqwest
# would.
ureq = "3"
zip = "8"
dirs = "6"

[package.metadata.docs.rs]
# Pin nightly to avoid generic-array 0.14 breakage (doc_auto_cfg removed in Rust 1.92)
# See: https://github.com/rust-lang/rust/pull/138907
toolchain = "nightly-2025-05-01"

[[bench]]
name = "browser_operations"
harness = false

[[bench]]
name = "page_operations"
harness = false

[[bench]]
name = "guid_operations"
harness = false
